--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build:
       context: .
       dockerfile: dockerfile.dwh
+    container_name: dwh_pipeline
     volumes:
       #read-only bind mount
       - ${HOME}/.dbt/profiles.yml:/pipeline/profiles.yml:ro
@@ -12,13 +13,21 @@ services:
       - ./duckdb_warehouse:/duckdb_warehouse
     ports:
       - "3000:3000"
+    environment:
+      - DUCKDB_PATH=/duckdb_warehouse/job_ads.duckdb
+      - DBT_PROFILES_DIR=/pipeline/
 
   dashboard:
     build:
       context: .
       dockerfile: dockerfile.dashboard
+    container_name: dashboard
+    depends_on:
+      - dwh_pipeline
     volumes:
       #read-only bind mount
-      - ./duckdb_warehouse:/duckdb_warehouse:ro
+      - ./duckdb_warehouse:/duckdb_warehouse:rw
     ports:
       - "8501:8501"
+    environment:
+      - DUCKDB_PATH=/duckdb_warehouse/job_ads.duckdb
