--- a/dockerfile.dashboard
+++ b/dockerfile.dashboard
@@ -1,11 +1,23 @@
+
+#  Dockerfile for Streamlit Dashboard
 FROM python:3.11-slim
 
+
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+
+# Define path to your DuckDB warehouse file
 ENV DUCKDB_PATH=/duckdb_warehouse/job_ads.duckdb
 
-WORKDIR /app/dashboard
+WORKDIR /app
 
-COPY dashboard/ /app/dashboard/
+COPY requirements.txt .
 
-RUN pip install streamlit duckdb pandas python-dotenv
+RUN pip install --no-cache-dir -r requirements.txt
 
-CMD ["streamlit", "run", "dashboard_main.py", "--server.port=8501", "--server.address=0.0.0.0"]
+COPY . .
+
+EXPOSE 8501
+
+
+CMD ["streamlit", "run", "dashboard/dashboard_main.py", "--server.port=8501", "--server.address=0.0.0.0"]
