--- a/dockerfile.dwh
+++ b/dockerfile.dwh
@@ -1,6 +1,9 @@
 FROM python:3.11
 
-ENV DBT_PROFILES_DIR=/pipeline/ \ 
+
+ENV PYTHONDONTWRITEBYTECODE=1 \ 
+    PYTHONUNBUFFERED=1 \
+    DBT_PROFILES_DIR=/pipeline/ \ 
     DUCKDB_PATH=/duckdb_warehouse/job_ads.duckdb
 
 WORKDIR /pipeline/orchestration
@@ -10,5 +13,7 @@ COPY dbt_code/ /pipeline/dbt_code/
 COPY orchestration/ /pipeline/orchestration/
 
 RUN pip install dagster dagster-dbt dagster-dlt dagster-webserver dbt-core dbt-duckdb dlt duckdb
+
+EXPOSE 3000
 
 CMD ["dagster", "dev", "-f", "definitions.py", "-h", "0.0.0.0", "-p", "3000"]
