--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,4 @@ __marimo__/
 orchestration/.tmp_dagster_home_13bdyio1/history/runs.db
 orchestration/.tmp_dagster_home_13bdyio1/history/runs/index.db
 orchestration/.tmp_dagster_home_13bdyio1/schedules/schedules.db
+orchestration/.tmp_dagster_home_*/
