--- a/dbt_code/models/src/sources.yml
+++ b/dbt_code/models/src/sources.yml
@@ -3,7 +3,7 @@ sources:
       schema: staging
       tables:
         - name: stg_ads
-          identifier: jobads_resource
+          identifier: job_ads
           metadata:
             dagster:
               asset_key: ['dlt_jobads_source_jobads_resource']
